Implement login; User list improvements

--- a/web/assets/css/userlist.css
+++ b/web/assets/css/userlist.css
@@ -18,11 +18,11 @@
   vertical-align: middle !important;
 }
 
-.team-role-list {
+.global-role-list {
   padding-left: 0;
 }
 
-.team-role-list li {
+.global-role-list li {
   margin-right: 0.5em;
 }
 
