--- a/web/assets/css/common.css
+++ b/web/assets/css/common.css
@@ -1,8 +1,3 @@
-.navbar-button {
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
-
 /*
   Prevent display of raw angular code in html until angular is loaded.
   See https://docs.angularjs.org/api/ng/directive/ngCloak
@@ -11,16 +6,6 @@
   display: none !important;
 }
 
-.navbar-brand h1 {
-  font-size: 25px;
-  margin-bottom: 3px;
-}
-
-.navbar-brand h2 {
-  font-size: 15px;
-  margin-top: 0;
-}
-
-header .navbar {
-  height: 80px;
+.navbar-header {
+  font-size: 1.5em;
 }
